Fix Page title and grid first column alignment

--- a/app/styles/includes/_common.less
+++ b/app/styles/includes/_common.less
@@ -71,6 +71,15 @@ body {
     }
 }
 
+// Common ngGrid Styles
+
 div[gridscrollbar] {
   height: ~"calc(100vh - 150px)";
+}
+
+.ngCellText,
+.ngHeaderText {
+  &.colt0 {
+    padding-left: 30px;
+  }
 }
